src/components/App/App.scss
@import "../../scss/variables";
@import "../../scss/mixins";

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: $dark-bg-color;
  margin: 2rem;
  overflow: auto;
  // border: 1px solid #fff;

  &::-webkit-scrollbar {
    width: 0;
    height: 0;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }
}

a {
  text-decoration: none;

  &:hover {
    cursor: crosshair;
  }
}

ul {
  list-style-type: none;
}

.App {
  margin: 0 auto;
  // height: 100vh;
  transition: background-color 0.3s, color 0.3s;

  &.dark {
    background: $dark-bg-color;
    color: $dark-text-color;

    a {
      color: $dark-text-color;

      &:hover {
        color: #000;
        background: $dark-special-color;
      }
    }

    .About {
      .tag {
        background-color: $dark-special-color;
        color: $dark-bg-color;
      }
    }

    .Header {
      h1:hover,
      h5:hover {
        cursor: crosshair;
        color: $dark-special-color;
      }
    }

    .Contact {
      .contact-form {
        form {
          ul {
            li {
              input,
              textarea {
                border: 1px solid $dark-special-color;
              }
            }
          }

          .flat-button {
            background-color: $dark-special-color;
            color: $dark-bg-color;

            &:hover {
              background-color: darken($dark-special-color, 10%);
            }
          }
        }
      }
    }

    .Projects {
      .project-list {
        ul {
          li button {
            color: $dark-text-color;

            &::before {
              background-color: $dark-special-color;
            }
          }
        }
      }

      .item {
        hr {
          border: 0.5px solid $dark-special-color;
        }
      }

      .tags {
        .tag {
          background: none;
          border: 1px solid $dark-special-color;
          color: $dark-special-color;

          &:hover {
            background: $dark-special-color;
            border: 1px solid $dark-special-color;
            color: $dark-bg-color;
          }
        }
      }
    }

    .Resume {
      ul {
        li {
          color: darken($dark-text-color, 50%);
        }
      }

      hr {
        border: 1px solid $dark-special-color;
      }

      .about {
        p {
          color: darken($dark-text-color, 50%);
          margin-right: 5rem;
        }
      }

      a {
        color: $dark-special-color;
      }
    }

    #dark-mode {
      background: $dark-special-color;
      border: 1px solid $dark-special-color;
    }

    #header-4,
    #header-5 {
      color: transparent;
      -webkit-text-stroke: 1px $dark-special-color;
      text-stroke: 1px $dark-special-color;
    }
  }

  &.light {
    background: $light-bg-color;
    color: $light-special-color;

    a {
      color: $special-orange;

      &:hover {
        color: #fff;
        background: $special-orange;
      }
    }

    .Layout {
      border: 1px solid $special-orange;
    }

    .About {
      .tag {
        background-color: $special-orange;
        color: #fff;
      }
    }

    .Header {
      h1:hover,
      h5:hover {
        cursor: crosshair;
        color: $special-orange;
      }
    }

    .Contact {
      .contact-form {
        form {
          ul {
            li {
              input,
              textarea {
                border: 1px solid $special-orange;
              }
            }
          }

          .flat-button {
            background-color: $special-orange;
            color: $light-bg-color;

            &:hover {
              background-color: lighten($special-orange, 10%);
            }
          }
        }
      }
    }

    .Projects {
      .project-list {
        ul {
          li button {
            color: $light-special-color;

            &::before {
              background-color: $special-orange;
            }
          }
        }
      }

      .item {
        hr {
          border: 0.5px solid $special-orange;
        }
      }

      .tags {
        .tag {
          background: none;
          border: 1px solid $special-orange;
          color: $special-orange;

          &:hover {
            background: $special-orange;
            border: 1px solid $special-orange;
            color: $light-bg-color;
          }
        }
      }
    }

    .Resume {
      ul {
        li {
          color: lighten($light-special-color, 15%);
        }
      }

      hr {
        border: 1px solid $special-orange;
      }

      .about {
        p {
          color: $light-special-color;
          margin-right: 5rem;
        }
      }

      a {
        color: $special-orange;
      }
    }

    #light-mode {
      background: $special-orange;
      border-color: $special-orange;

      &:hover {
        color: $special-orange;
      }
    }

    #dark-mode {
      border: 1px solid $light-special-color;
    }

    #header-4,
    #header-5 {
      color: transparent;
      -webkit-text-stroke: 1px $special-orange;
      text-stroke: 1px $special-orange;
    }
  }

  @include respond-to("mobile") {
    // background: red !important;

    .Layout {
      .Header {
        h1 {
          font-size: 3rem;
        }

        small {
          font-size: 1.5rem;
          top: 1.5rem;
        }
      }

      .content {
        display: block;

        .Navbar {
          position: absolute;
          bottom: 2rem;

          ul {
            font-size: 0.65rem;
          }
        }

        .page {
          display: block;

          .Home {
            margin: 5rem auto;
            text-align: center;

            h2 {
              font-size: 3rem;
            }

            #header-9 {
              font-size: 4rem;
            }
          }

          .About {
            padding: 2rem 1rem;
            margin: auto;
            width: 70%;
            display: block;

            h3,
            p {
              width: 100%;
            }

            .tags {
              width: 90%;
            }
          }

          .Contact,
          .Resume {
            margin: 2rem auto;
          }

          .Projects {
            display: block;

            align-items: baseline;
            grid-gap: 1rem;
            margin-right: 0;
            margin-top: 5rem;
            height: auto;

            .project-list {
              margin-left: 3rem;
              display: flex;
              flex-direction: column;
              flex-grow: 1;

              ul {
                padding: 0;
                width: 300px;

                li {
                  button {
                    text-align: left;
                    width: 100%;
                  }
                }
              }
            }

            .item {
              margin: 2rem auto;
              width: 350px;
            }
          }
        }
      }
    }
  }
  @include respond-to("tablet") {
    // background: blue !important;

    .Layout {
      .content {
        display: block;

        .Navbar {
          position: absolute;
          bottom: 2rem;

          ul {
            font-size: 0.65rem;
          }
        }

        .page {
          .About {
            padding: 2rem 1rem;
            width: 50%;

            h3,
            p {
              width: 100%;
            }

            .tags {
              width: 90%;
            }
          }

          .Projects {
            display: grid;
            grid-template-columns: 1fr 1fr;
            align-items: baseline;
            grid-gap: 1rem;
            margin-right: 0;
            margin-top: 5rem;
            height: auto;

            .project-list {
              margin-left: 3rem;
              display: flex;
              flex-direction: column;
              flex-grow: 1;

              ul {
                margin: 0;
                padding: 0;
                width: 300px;

                li {
                  button {
                    text-align: left;
                    width: 100%;
                  }
                }
              }
            }

            .item {
              margin-right: 1rem;
              width: 400px;
            }
          }
        }
      }
    }
  }
  @include respond-to("desktop") {
    // background: green !important;

    .Layout {
      .content {
        .page {
          .Projects {
            display: grid;
            grid-template-columns: 1fr 1fr;
            grid-gap: 1rem;
            margin-right: 0;
            margin-top: 5rem;
            height: auto;
            align-items: start;
            align-content: space-between;

            .project-list {
              margin-left: 1rem;
              display: flex;
              flex-direction: column;
              flex-grow: 1;

              ul {
                margin: 0;
                padding: 0;
                width: 300px;

                li {
                  button {
                    text-align: left;
                    width: 100%;
                  }
                }
              }
            }

            .item {
              margin-right: 1rem;
              width: 400px;
            }
          }
        }
      }
    }
  }
}

